2006-04-17  dima  <dima.exe@gmail.com>
  * rails-ui.el: apply snippets to nxml-mode-abbrev-table

2006-04-11  dima  <dima.exe@gmail.com>

  * rails-for-controller.el 
  (rails-controller:switch-to-view): using rais-core:menu
  (rails-controller:switch-with-menu): using rails-core:menu

  * rails-navigation.el: new function rails-nav:create=new-layout
  (rails-nav:goto-file-with-menu): add optional parameter append-to-menu

  * rails-for-rhtml.el: 
  drop rails-for-rhtml:switch-to-controller-action

  * rails-for-controller.el:
  drop rails-for-controller:switch-by-current-controller,
  rails-for-controller:switch-to-functional-test,
  rails-for-controller:switch-to-helper,
  rails-for-controller:switch-to-view2,
  rails-for-controller:switch-to-controller
  rails-for-controller:switch-to-views
  (rails-controller:switch-with-menu): mark partials, add separator

  * rails-lib.el (snippet-menu-line): add snippet abbrevation in menu

  * rails-ui.el (rails-minor-mode-menu-bar-map): 
  drop menu items [webrick brows], [webrick auto-brows]

2006-04-04 CrazyPit <crazypit13@gmail.com>
  * rails-navigation.el, rails-lib.el, rails-ui.el: rails-lib:goto-* renamed to
  rails-nav:goto-* and moved to rails-navigation.el

2006-04-01 CrazyPit <crazypit13@gmail.com>
  * rails-core.el: new function js-file, partial-name updated.
  * rails-navigation.el: new rule for switching line to file (rails-line-->js)
  * rails-scipts.el: bugfix in run-ruby-in-buffer
  * rails-ui.el: new snippet %for
  * rails-webrick.el: rails-webrick:start now interactive, auto-open-browser 
  work only in controllers and views.
        * rails.el: bugfix in rails-create-tags 

2006-03-31 CrazyPit <crazypit13@gmail.com>
  * rails-navigation.el: rails-goto-file-from-file change, now use funcall instead
  rails-goto-menu-call, function rails-goto-menu-call removed.
  * rails-for-controller.el: views-for-current-action now using lexical closures.
  * rails-lib.el: fix bug in snippet-menu-line